--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <li><a href="https://example.com" style="color: red;">Link</a></li>
         <li><a href="https://example.com" style="color: red;">Link</a></li>
     </ul>
-    <h2>I'm an h3</h2>
-    <div><a href="https://example.com" style="color: green;">I'm a Link</a></div>
-    <div><a href="https://example.com" style="color: green;">I'm a Link</a></div>
-    <div><a href="https://example.com" style="color: green;">I'm a Link</a></div>
+    <h2>I'm an h2</h2>
+    <div style="border: 1px solid black;">
+        <a href="https://example.com" style="color: green;">I'm a Link</a>
+    </div>
+    <div style="border: 1px solid black;">
+        <a href="https://example.com" style="color: green;">I'm a Link</a>
+    </div>
+    <div style="border: 1px solid black;">
+        <a href="https://example.com" style="color: green;">I'm a Link</a>
+    </div>
 </body>
 </html>
