--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
         div  a {
             color: green;
         }
+        #special-Link{
+            color: lightgray;
+        }
+        .regular-Link{
+            color: lightblue;
+        }
     </style>
 </head>
 <body>
     <h1>I'm an h1</h1>
     <ul>
-        <li><a href="https://example.com" >Link</a></li>
-        <li><a href="https://example.com" >Link</a></li>
-        <li><a href="https://example.com" >Link</a></li>
+        <li ><a href="https://example.com" id="special-Link">Link</a></li>
+        <li><a href="https://example.com" class="regular-Link">Link</a></li>
+        <li><a href="https://example.com" class="regular-Link">Link</a></li>
     </ul>
     <h2>I'm an h2</h2>
     <div>
