--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         .regular-Link{
             color: lightblue;
         }
+        #exec-bio{
+            background-color: lightgray;
+        }
+        .bio-box{
+            border: 1px solid #000;
+        }
+        .bio-box a {
+            color: green;
+        }
     </style>
 </head>
 <body>
@@ -31,13 +40,13 @@
         <li><a href="https://example.com" class="regular-Link">Link</a></li>
     </ul>
     <h2>I'm an h2</h2>
-    <div>
+    <div id="exec-bio" class="bio-box">
         <a href="https://example.com">I'm a Link</a>
     </div>
-    <div>
+    <div class="bio-box">
         <a href="https://example.com">I'm a Link</a>
     </div>
-    <div>
+    <div class="bio-box">
         <a href="https://example.com">I'm a Link</a>
     </div>
 </body>
