--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         .bio-box a {
             color: green;
         }
+
+        .alert{
+            background-color: red ;
+        }
+        #exec-bio.alert{
+            background-color: red;
+        }
     </style>
 </head>
 <body>
@@ -34,13 +41,13 @@
         <li><a href="https://example.com" class="regular-Link">Link</a></li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box alert">
         <a href="https://example.com">I'm a Link</a>
     </div>
     <div class="bio-box">
         <a href="https://example.com">I'm a Link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box alert">
         <a href="https://example.com">I'm a Link</a>
     </div>
 </body>
